--- a/site/assets/scss/_boosted.scss
+++ b/site/assets/scss/_boosted.scss
@@ -1,4 +1,12 @@
 // stylelint-disable selector-max-id
+:root {
+  scroll-padding-top: $offset-top / 2;
+
+  @include media-breakpoint-up(lg) {
+    scroll-padding-top: $offset-top;
+  }
+}
+
 body {
   padding-top: $spacer * 2.5;
 
